--- a/changelog/migration-upgrade-guides/breaking-changes.mdx
+++ b/changelog/migration-upgrade-guides/breaking-changes.mdx
@@ -1,150 +1,169 @@
 ---
-title: "Breaking Changes & Major Migrations"
-description: "Comprehensive, version-by-version breakdowns of all backward-incompatible changes, major migrations, and required actions for affected users. This page helps teams prepare for or react to disruptive changes—reducing friction and troubleshooting during upgrade cycles."
+title: "Breaking Changes & Migrations"
+description: "Clear explanations of breaking changes introduced in major or minor releases, including impact analysis and code examples. Provides migration strategies to adapt existing test code, ensuring users can maintain compatibility and reliability with minimal disruption."
 ---
 
-# Breaking Changes & Major Migrations
+# Breaking Changes & Migrations
 
-Comprehensive, version-by-version breakdowns of all backward-incompatible changes, major migrations, and required actions for affected users. This page helps teams prepare for or react to disruptive changes—reducing friction and troubleshooting during upgrade cycles.
-
----
-
-## Overview
-
-GoogleTest and GoogleMock evolve to improve testing experiences, performance, and platform support. Occasionally, updates introduce breaking changes or require migration steps. This page documents these major changes across versions to enable smooth transitions and avoid surprises.
+This page provides clear explanations of breaking changes introduced in major or minor releases of GoogleTest and GoogleMock. It offers detailed impact analyses and practical migration strategies, including code examples, to help users adapt existing test code with minimal disruption while maintaining compatibility and reliability.
 
 ---
 
-## How to Use This Guide
+## Understanding Breaking Changes
 
-- **Review each version in reverse chronological order** to identify breaking changes that impact your codebase.
-- **Follow migration instructions carefully**, especially for major releases.
-- **Check compatibility notes** regarding supported platforms, compiler requirements, and build system updates.
-- **Coordinate with your team** to plan upgrades, adapt build configurations, and update test code.
+When upgrading to a new version, especially major or minor releases, some changes may be incompatible with previous code. This section aids users in identifying such breaking changes specifically related to GoogleMock mocking APIs and behaviors.
 
----
+### User-Impact Focus
 
-## Version-Specific Breaking Changes
-
-### Version 1.17.0 (Latest Release)
-
-- **Minimum C++ Standard Raised to C++17**
-  - GoogleTest now requires C++17 support. Ensure your build environment and compiler toolchain meet this.
-  - If not feasible, migration to earlier releases or toolchain upgrade is necessary.
-
-- **Build System Updates**
-  - The standalone CMake project can be customized with `-DBUILD_GMOCK=OFF` to exclude GoogleMock if desired.
-  - Use `FetchContent_MakeAvailable(googletest)` with CMake 3.14+ to embed GoogleTest in existing CMake builds.
-  - Adjust runtime linkage on Windows by setting the `gtest_force_shared_crt` CMake option to match your project’s CRT linkage.
-
-- **Runtime and API Changes in GoogleMock**
-  - `MOCK_METHOD` macros now require careful parentheses handling around types with commas (e.g., `std::pair`).
-  - Several new matchers and action customizations have been introduced; review [Custom Matchers and Actions](https://google.github.io/googletest/gmock_cook_book.html#NewMatchers) for adjustments.
-
-- **Deprecated Macros and APIs**
-  - Old `MOCK_METHODn` macros are deprecated; migrate to new `MOCK_METHOD` style for better compiler diagnostics and functionality.
+Breaking changes documented here focus on what users need to update in their test code, rather than internal implementation changes. This enables smooth transitions and continuous test correctness.
 
 ---
 
-### Version 1.16.x
+## Common Categories of Breaking Changes
 
-- **Threading and Multi-threaded Test Macros**
-  - Library improved thread safety detection for multi-threaded tests; verify your tests handle threading flags correctly.
-
-- **Death Test Behavioral Adjustments**
-  - Changes in how death tests run with threads require code that forks to be single-threaded beforehand.
-  - Use recommended naming convention `*DeathTest` for test suites containing death tests to avoid concurrency issues.
-
-- **Matcher and Action Enhancements**
-  - Changes in matcher composition and lambda invocation require migration of some custom matchers.
+- **Mocking API modifications:** Changes to macros like `MOCK_METHOD` or mock class structures that require updates to mock definitions.
+- **Strictness mode updates:** Alterations in `NiceMock`, `NaggyMock`, or `StrictMock` behaviors affecting uninteresting call handling.
+- **Matcher and Action adjustments:** Updates influencing how matchers are composed or how actions are specified in expectations.
+- **Deprecations:** Features or patterns deprecated and removed in newer versions that require migration.
 
 ---
 
-### Version 1.15.x and Earlier
+## Breaking Changes Impact Analysis
 
-- **Removal of Support for Deprecated Compilers**
-  - Visual Studio 2013 and older versions no longer supported. Upgrade your compiler to VS2015 or newer.
+Whenever a breaking change is introduced, it is important to understand:
 
-- **Changes to Default Test Filtering and Output**
-  - Flags for test filtering and colored output have been updated.
-  - Tests relying on legacy flag names or environment variables should migrate accordingly.
-
-- **Macros and Mock Behavior**
-  - Shift from NaggyMock default verbosity to more controlled behavior; users must explicitly specify strictness modes.
-
-- **Global Setup and Tear-down Changes**
-  - Adjustments in handling `::testing::Environment` lifecycle require updates to environment registration code.
+- Which aspect of your tests it affects.
+- How it changes the behavior, syntax, or semantics.
+- Whether it imposes new constraints or removes previous functionality.
 
 ---
 
-## Common Migration Steps
+## Migration Strategies
 
-- **Verify Your Build Environment Compatibility**
-  - Confirm compiler version, C++ standard support, and build tool versions.
+To minimize disruption, follow these migration steps when adapting your existing test code:
 
-- **Update your CMakeLists.txt**
-  - Replace deprecated build options.
-  - For embedded builds, use `FetchContent_Declare` and `FetchContent_MakeAvailable`.
+<Steps>
+<Step title="Review Release Notes for Breaking Changes">
+Always read the official release notes accompanying the new version to identify breaking changes relevant to your usage.
+</Step>
+<Step title="Identify Affected Mock Classes and Methods">
+Examine your test code for use of any deprecated or changed mock methods or macros.
+</Step>
+<Step title="Update MOCK_METHOD Macros and Signatures">
+Modify declarations using `MOCK_METHOD` to match the new syntax or qualifiers as needed. For example, adding or removing qualifiers like `const`, `override`, or `noexcept`.
+</Step>
+<Step title="Adjust Usage of Strictness Wrappers">
+Check if your code uses `NiceMock`, `NaggyMock`, or `StrictMock`. Adapt to any changes in their semantics or inheritance requirements.
+</Step>
+<Step title="Modify Expectations and Actions">
+Update `EXPECT_CALL` and `ON_CALL` chains, especially if matcher or action APIs have tightened or altered.
+</Step>
+<Step title="Run Tests and Fix Failures">
+Compile and run your tests, paying close attention to any unexpected failures or warnings indicating changes required.
+</Step>
+</Steps>
 
-- **Refactor Mock Definitions**
-  - Replace old `MOCK_METHODn` with the new `MOCK_METHOD` macro.
-  - Use parentheses around template types with commas.
-
-- **Adapt Test Code to C++17 Features and Limitations**
-  - Use new predicate/assertion mechanisms for enhanced failure messages.
-  - Follow new conventions for typed and parameterized tests.
-
-- **Review and Adjust Strictness Modes of Mocks**
-  - Decide when to use `NiceMock`, `StrictMock`, or `NaggyMock` for warnings on uninteresting calls.
-
-- **Consider New Features for Test Event Listeners**
-  - Update custom event listeners per new API signatures.
-
-- **Rebuild and Test Thoroughly**
-  - Engage continuous integration for the whole test suite.
-  - Use `--gtest_list_tests` and verbose logging flags for diagnosing changes.
-
----
-
-## Troubleshooting Upgrade Issues
-
-- **Linker Errors After Upgrade**
-  - Ensure all your dependencies link against the same C++ standard library and runtime versions.
-  - Match static vs dynamic linking settings, especially on Windows.
-
-- **Unexpected Test Failures or Skipped Tests**
-  - Check for changed default behaviors, especially around disabled tests and filtering.
-
-- **Mock Failures Due to Changed Expectations or Matchers**
-  - Review ON_CALL and EXPECT_CALL order and specificity.
-  - Use `--gmock_verbose=info` for detailed tracing.
-
-- **Build Failures with Macros**
-  - Verify correct macro usage with parentheses for types containing commas.
-
-- **C++17 Compatibility Breakages**
-  - Review deprecated language constructs; update to modern equivalents.
+<Tip>
+Maintain a branch with your existing tests before migration to enable easy comparison and rollback if needed.
+</Tip>
 
 ---
 
-## Additional Resources and Links
+## Example Migration Scenario: Updating `MOCK_METHOD` Usage
 
-- [Official GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [GoogleMock Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
-- [GoogleTest Release Notes and Version Overviews](/changelog/release-history/version-overview)
-- [Build & Integration Guides](/overview/integration-platforms/integration-other-systems)
-- [Supported Platforms](/overview/integration-platforms/platform-support)
+A common breaking change can be updates in the `MOCK_METHOD` macro signature. For instance, adapting to new parameter arrangements or qualifiers.
+
+### Old Style Usage:
+```cpp
+class MyMock {
+ public:
+  MOCK_METHOD1(Foo, bool(int));
+  MOCK_CONST_METHOD1(Bar, int(int));
+};
+```
+
+### New Style Usage:
+```cpp
+class MyMock {
+ public:
+  MOCK_METHOD(bool, Foo, (int));
+  MOCK_METHOD(int, Bar, (int), (const));
+};
+```
+
+This change standardizes `MOCK_METHOD` usage and encourages explicit qualifiers.
+
+<KeyMigrationTips>
+- Wrap complex types with parentheses when they contain commas.
+- Ensure mocked methods that override `const` or `noexcept` methods specify those qualifiers.
+- Always declare `MOCK_METHOD` macros in `public:` scope regardless of base class visibility.
+</KeyMigrationTips>
 
 ---
 
-## Best Practices for Future Upgrades
+## Handling Changes in Strictness Modes
 
-- Keep an eye on release notes and migration guides for every release.
-- Frequently update development environments to stay current with required standards (C++17+).
-- Modularize mocks and tests to isolate upgrade impacts.
-- Incorporate GoogleTest and GoogleMock seamlessly into your CI workflows for automated validation.
+GoogleMock features `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to control behavior on uninteresting calls. Breaking changes here might alter default behaviors or inheritance restrictions.
+
+### Guidance:
+
+- Avoid nesting strictness wrappers like `NiceMock<StrictMock<...>>`, which is not supported.
+- Confirm that your mock classes have virtual destructors to ensure proper strictness enforcement.
+- If upgrading causes unexpected call warnings or failures, adjust the strictness wrapper or expectations accordingly.
 
 ---
 
-By adhering to the guidance in this document, you will minimize downtime and maintenance overhead during GoogleTest and GoogleMock upgrades, ensuring your C++ test suites remain reliable, maintainable, and performant.
+## Code Example: Migrating to `NiceMock` Usage
+
+```cpp
+using ::testing::NiceMock;
+
+// Before migration:
+MockClass mock;
+EXPECT_CALL(mock, DoSomething());
+
+// After migration for suppressing warnings on uninteresting calls:
+NiceMock<MockClass> nice_mock;
+EXPECT_CALL(nice_mock, DoSomething());
+```
+
+This change improves test resilience against unexpected but tolerated calls.
+
+---
+
+## Troubleshooting Common Migration Issues
+
+<AccordionGroup title="Common Pitfalls and Solutions">
+<Accordion title="Compilation Failures Due to MOCK_METHOD Syntax">
+Review the macro usage closely; ensure that argument lists are correctly parenthesized and qualifiers match overridden base methods.
+</Accordion>
+<Accordion title="Uninteresting Call Warnings After Upgrading">
+Verify your use of strictness modifiers. Switch from default (naggy) mocks to `NiceMock` where warnings are undesired.
+</Accordion>
+<Accordion title="Unexpected Behavior Changes in Mocks">
+Check whether your tests rely on deprecated or changed action sequences. Adapt `EXPECT_CALL` chains and use `RetiresOnSaturation()` where applicable.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Best Practices for Migration
+
+- **Incremental Upgrade:** Migrate small test components separately to isolate impacts.
+- **Keep Tests Readable:** Adjust mocks for clearer intentions using explicit qualifiers.
+- **Use Verbosity for Debugging:** Enable `--gmock_verbose=info` during migration to trace unexpected calls.
+- **Leverage Migration Guides:** Follow online migration notes and community examples.
+
+---
+
+## Related Documentation
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes and practical tips for mock usage.
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — Detailed API and macro explanations.
+- [Strictness Modes Guide](https://google.github.io/googletest/api/reference/mocking-apis/strictness-modes.html) — In-depth discussion on `NiceMock`, `NaggyMock`, `StrictMock`.
+- [Matchers Reference](https://google.github.io/googletest/reference/matchers.html) — Compound matchers and custom matcher creation.
+- [Actions Reference](https://google.github.io/googletest/reference/actions.html) — Specifying mock method behaviors.
+
+---
+
+For effective migration, also review the [Version History](./version-history) and [Deprecation Notices](./deprecations) pages to fully understand the upgrade path and deprecated features.
